--- a/src/sass/flx/_work-v1.0.scss
+++ b/src/sass/flx/_work-v1.0.scss
@@ -1,9 +1,11 @@
-/* grid work-v1.0 : this uses auto-flow: dense to layout loop generated content dynamically
-                  : this also defines the bespoke grids for featured work
+/* grid work-v1.0 : this has three sections:
+
+curated grid
+archive grid
 ---------------------------------------------------------------------------------------------------------------------- */
 .our-work {
     .filters {
-        margin-bottom: 4rem;
+        margin-bottom: 2.25rem;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
@@ -57,138 +59,141 @@
             font-weight: 500;
         }
     }
-}
 
-.grid-work {
-    @media (min-width: 600px) {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        //grid-template-rows: auto;
-        grid-column-gap: 48px;
-        //grid-auto-flow: dense;
+    /* curated grid
+    ------------------------------------------------------------------------- */
+    .our-work__featured {
+        @media (min-width: 960px) {
+            .two-columns,
+            .three-columns,
+            .full-width {
+                margin-bottom: var(--drop-large);
+            }
+        }
+
+        article {
+            margin-bottom: var(--mb-drop-small);
+        }
+
+        .image img {
+            width: 100%;
+        }
+
+        .meta {
+            font-size: var(--font-base);
+            color: var(--mid-black);
+
+            @media (min-width: 880px) {
+                font-size: var(--font-base-plus);
+            }
+        }
 
         .link {
-            font-family: 'cabinet-medium';
-            font-size: var(--font-base-plus);
+            font-family: var(--copy-med);
+            font-size: var(--font-base);
             color: var(--black);
-        }
-    }
 
-    li {
-        position: relative;
-        margin-bottom: 2rem;
-        grid-column: span 12;
-
-        &.link {
-            color: var(--meta);
+            @media (min-width: 880px) {
+                font-size: var(--font-base-plus);
+            }
         }
 
-        @media (min-width: 768px) {
-            grid-column: auto / span 6;
-            margin-bottom: 6rem;
+        .full-width {
+            margin-bottom: 9rem;
+        }
+
+        .lh-col,
+        .rh-col,
+        .three-columns {
+            article {
+                grid-column: 1 / -1;
+            }
         }
 
         @media (min-width: 960px) {
-            grid-column: auto / span 4;
-        }
+            grid-template-rows: 2;
 
-        &.wide {
-            grid-column: span 12;
-
-            @media (min-width: 960px) {
-                grid-column: span 8;
-                grid-row: span 2;
-            }
-        }
-    }
-
-    img {
-        width: 100%;
-        margin-bottom: 1rem;
-    }
-}
-
-/* curated grid */
-.our-work__featured {
-    article {
-        margin-bottom: var(--mb-drop-small);
-    }
-
-    h3 {
-        color: red;
-    }
-
-    .image img {
-        width: 100%;
-    }
-
-    .meta {
-        font-size: var(--font-base);
-        color: var(--mid-black);
-
-        @media (min-width: 880px) {
-            font-size: var(--font-base-plus);
-        }
-    }
-
-    .link {
-        font-family: var(--copy-med);
-        font-size: var(--font-base);
-        color: var(--black);
-
-        @media (min-width: 880px) {
-            font-size: var(--font-base-plus);
-        }
-    }
-
-    .full-width {
-        margin-bottom: 9rem;
-    }
-
-    .lh-col,
-    .rh-col,
-    .three-columns {
-        article {
-            grid-column: 1 / -1;
-        }
-    }
-
-    @media (min-width: 960px) {
-        grid-template-rows: 2;
-
-        .lh-col {
-            article:nth-of-type(1) {
-                grid-column: 1 / 9;
-
-                .details {
+            .lh-col {
+                article:nth-of-type(1) {
                     grid-column: 1 / 9;
-                    grid-row: 2 / 3;
+
+                    .details {
+                        grid-column: 1 / 9;
+                        grid-row: 2 / 3;
+                    }
+                }
+                article:nth-of-type(2) {
+                    grid-column: 9 / -1;
                 }
             }
-            article:nth-of-type(2) {
-                grid-column: 9 / -1;
+
+            .rh-col {
+                article:nth-of-type(1) {
+                    grid-column: 1 / 5;
+                }
+                article:nth-of-type(2) {
+                    grid-column: 5 / -1;
+                }
+            }
+
+            .three-columns {
+                article:nth-of-type(1) {
+                    grid-column: 1 / 5;
+                }
+                article:nth-of-type(2) {
+                    grid-column: 5 / 9;
+                }
+                article:nth-of-type(3) {
+                    grid-column: 9 / -1;
+                }
+            }
+        }
+    }
+
+    /* archive grid
+    ------------------------------------------------------------------------- */
+    .our-work__archive {
+        @media (min-width: 600px) {
+            margin-top: 29.25rem;
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            grid-column-gap: var(--gutter-large);
+        }
+
+        li {
+            position: relative;
+
+            @media (min-width: 600px) {
+                margin-bottom: 4rem;
+                grid-column: span 12;
+            }
+
+            @media (min-width: 768px) {
+                grid-column: auto / span 6;
+            }
+
+            @media (min-width: 960px) {
+                grid-column: auto / span 4;
+            }
+
+            &.wide {
+                grid-column: span 12;
+
+                @media (min-width: 960px) {
+                    grid-column: span 8;
+                    grid-row: span 2;
+                }
             }
         }
 
-        .rh-col {
-            article:nth-of-type(1) {
-                grid-column: 1 / 5;
-            }
-            article:nth-of-type(2) {
-                grid-column: 5 / -1;
-            }
+        img {
+            width: 100%;
+            margin-bottom: 0.5rem;
         }
 
-        .three-columns {
-            article:nth-of-type(1) {
-                grid-column: 1 / 5;
-            }
-            article:nth-of-type(2) {
-                grid-column: 5 / 9;
-            }
-            article:nth-of-type(3) {
-                grid-column: 9 / -1;
-            }
+        .link {
+            font-weight: var(--weight-regular-plus);
+            color: var(--mid-black);
         }
     }
 }
