--- a/src/sass/flx/_what-we-do.scss
+++ b/src/sass/flx/_what-we-do.scss
@@ -311,38 +311,35 @@
         margin-bottom: 6rem;
 
         .text {
-            // grid-column: 3 / 7;
+            line-height: normal;
 
             .title {
-                margin-bottom: var(--drop-small);
-                font-size: var(--font-base-plus);
+                margin-bottom: 6px;
+                font-family: var(--copy);
+                font-size: clamp(1.125rem, 1.075rem + 0.25vw, 1.25rem);
                 text-transform: uppercase;
-                line-height: var(--lh-medium);
                 color: var(--mid-black);
             }
 
             p {
+                max-width: 30ch;
                 margin-bottom: 0.5rem;
-                font-size: var(--font-base);
-                color: #9a9a9a;
-
-                @media (min-width: 880px) {
-                    font-size: var(--font-base-plus);
-                }
+                color: var(--mid-black);
             }
 
             p:first-of-type {
-                font-family: 'cabinet-medium';
-                color: var(--black);
+                font-family: var(--copy-med);
             }
 
             p:last-of-type {
-                margin-bottom: 2rem;
+                margin-bottom: 1.5rem;
             }
 
             .link {
                 margin-bottom: var(--mb-drop-medium);
                 display: block;
+                font-family: var(--copy-med);
+                font-size: var(--font-small);
                 text-transform: uppercase;
                 color: var(--black);
             }
@@ -358,30 +355,30 @@
         .text-image {
             display: grid;
             grid-template-columns: repeat(12, 1fr);
-            grid-gap: 48px;
-        }
+            column-gap: 48px;
 
-        .left {
-            .text {
-                grid-column: 1 / 7;
-                grid-row: 1 / 2;
+            .left {
+                .text {
+                    grid-column: 1 / 7;
+                    grid-row: 1 / 2;
+                }
+
+                .image {
+                    grid-column: 8 / -1;
+                    grid-row: 1 / 2;
+                }
             }
 
-            .image {
-                grid-column: 8 / -1;
-                grid-row: 1 / 2;
-            }
-        }
+            .right {
+                .text {
+                    grid-column: 8 / -1;
+                    grid-row: 1 / 2;
+                }
 
-        .right {
-            .text {
-                grid-column: 8 / -1;
-                grid-row: 1 / 2;
-            }
-
-            .image {
-                grid-column: 1 / 7;
-                grid-row: 1 / 2;
+                .image {
+                    grid-column: 1 / 7;
+                    grid-row: 1 / 2;
+                }
             }
         }
     }
@@ -389,7 +386,7 @@
     @media (min-width: 1120px) {
         .left {
             .text {
-                grid-column: 3 / 7;
+                grid-column: 3 / 8;
                 grid-row: 1 / 2;
             }
 
