--- a/src/sass/flx/_what-we-do.scss
+++ b/src/sass/flx/_what-we-do.scss
@@ -239,14 +239,15 @@
 
     // testimonial styles --------------------------------------------------
     .testimonial {
-        padding-top: 6rem;
-        padding-bottom: 6rem;
+        padding-top: 6.75rem;
+        padding-bottom: 5.5rem;
         display: grid;
         grid-template-columns: 1fr;
 
         // layout media queries --------------------------------------------------
         @media (min-width: 880px) {
             grid-template-columns: repeat(12, 1fr);
+            column-gap: var(--gutter-large);
 
             .lh-col {
                 grid-column: 2 / 4;
@@ -273,33 +274,31 @@
             }
 
             .author {
-                margin-bottom: 0.25rem;
-                font-family: 'cabinet-medium';
-                font-size: var(--font-base-plus);
-                line-height: var(--lh-medium);
+                // margin-bottom: 0.25rem;
+                font-family: var(--copy-med);
             }
 
             .role,
             .organisation {
                 color: var(--mid-black);
                 font-size: var(--font-base-plus);
-                line-height: var(--lh-medium);
             }
 
             .role {
-                margin-bottom: var(--drop-small);
+                margin-bottom: 0.25rem;
                 color: var(--black);
             }
 
             .organisation {
                 margin-bottom: var(--mb-drop-large);
-                color: var(--mid-black);
             }
         }
 
         .quote {
-            font-size: clamp(1.25rem, 2.5vw, 2.75rem);
-            line-height: 1.24;
+            max-width: 26ch;
+            font-family: var(--titling);
+            font-size: clamp(2rem, 1.7rem + 1.5vw, 2.75rem);
+            line-height: normal;
             color: var(--black);
             transform: translateY(-0.75rem);
         }
