--- a/src/sass/flx/_what-we-do.scss
+++ b/src/sass/flx/_what-we-do.scss
@@ -119,28 +119,25 @@
 
     // processes and process styles ---------------------------------------------
     .processes {
-        h2.title {
-            width: 12ch;
+        padding: 5rem 0 8.75rem 0;
+        background-color: #000;
+        color: var(--white);
+
+        .section-title {
             margin-bottom: var(--mb-drop-large);
-            font-size: clamp(2rem, 7.5vw, 4rem);
-            line-height: 1.08;
 
             @media (min-width: 880px) {
                 margin-bottom: 0;
             }
         }
-
-        padding: 5rem 0 10rem 0;
-        background-color: var(--black);
-        color: var(--white);
     }
 
     .process {
         position: relative;
-        margin-bottom: var(--mb-drop-large);
+        margin-bottom: var(--mb-drop-big);
 
         @media (min-width: 880px) {
-            margin-bottom: 112px;
+            margin-bottom: var(--drop-large);
         }
 
         display: grid;
@@ -178,17 +175,6 @@
             }
         }
 
-        &:after {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-            content: ('');
-            display: block;
-            background-repeat: no-repeat;
-        }
-
         // style elements -------------------------------------------------------
         .image {
             width: 80%;
@@ -201,37 +187,43 @@
         }
 
         .text {
-            padding-top: 1.25rem;
-            border-bottom: 1.5px solid var(--white);
+            position: relative;
+
+            &:before {
+                width: 174px;
+                height: 1.5px;
+                margin-bottom: 14px;
+                display: block;
+                content: '';
+                background-color: var(--white);
+            }
 
             @media (min-width: 880px) {
-                border-top: 1.5px solid var(--white);
+                // switch pesudo selector keyline here
             }
         }
 
         .meta {
-            margin-bottom: var(--drop-small);
+            margin-bottom: var(--mb-drop-small);
             display: block;
-            font-size: var(--font-base-plus);
-            line-height: var(--lh-medium);
         }
 
         .title {
             margin-bottom: 2rem;
             font-family: var(--titling);
-            font-size: clamp(2rem, 7.5vw, 4rem);
-            line-height: 1.2;
+            font-size: clamp(2rem, 1.2rem + 4vw, 4rem);
+            line-height: 1.09375;
         }
 
         .description {
-            padding-bottom: var(--mb-drop-large);
-            font-size: var(--font-base);
-            line-height: var(--lh-medium);
+            max-width: 35ch;
+            margin-bottom: 90px;
+            font-family: var(--copy-med);
             color: #c7c7c7;
 
             @media (min-width: 880px) {
                 padding-right: 9.375%;
-                padding-bottom: 0;
+                margin-bottom: 0;
                 font-size: var(--font-base-plus);
             }
         }
