--- a/src/sass/post-types/case-study.scss
+++ b/src/sass/post-types/case-study.scss
@@ -308,6 +308,32 @@
             }
         }
 
+        .stat-grid {
+            grid-column: 2 / -1;
+
+            display: grid;
+            grid-template-columns: 1fr;
+            align-items: center;
+            gap: var(--gutter-large);
+
+            @media (min-width: 880px) {
+                grid-template-columns: auto 1fr;
+            }
+
+            @media (min-width: 960px) {
+                grid-template-columns: auto 1fr auto 1fr;
+            }
+        }
+
+        .stat {
+            font-size: clamp(2rem, 1.7rem + 1.5vw, 2.75rem);
+            line-height: 1;
+
+            @media (min-width: 768px) {
+                justify-self: end;
+            }
+        }
+
         .collaborators-block {
             .title {
                 padding-top: 0.875rem;
