--- a/src/sass/page-sections/_banner.scss
+++ b/src/sass/page-sections/_banner.scss
@@ -13,9 +13,9 @@
 
     h1.statement {
         max-width: 25ch;
-        max-width: 1296px;
+        //max-width: 1296px;
         font-family: var(--titling);
-        font-size: clamp(2.125rem, 0.786rem + 3.571vw, 4rem);
+        font-size: clamp(2rem, 1rem + 5vw, 4.5rem);
         font-weight: 400;
         line-height: 1.08;
     }
