--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -19,14 +19,15 @@ header {
 
     .header-top {
         width: 100%;
+        padding-top: 14px;
         padding-left: 1.5rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
 
         .bb-logo {
-            width: 112px;
-            height: auto;
+            width: 94.344px;
+            height: 48px;
             display: block;
 
             svg {
